--- a/Interface/react/package.json
+++ b/Interface/react/package.json
@@ -6,7 +6,6 @@
     "@ant-design/icons": "^4.6.2",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "7.13.13",
-    "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -19,8 +18,8 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
     "chokidar": "^3.5.1",
+    "client-oauth2": "^4.3.3",
     "jest-canvas-mock": "^2.3.1",
-    "keycloak-js": "^12.0.4",
     "queue-typescript": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -78,6 +77,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "jest-fetch-mock": "^3.0.3",
+    "jwt-decode": "^3.1.2",
     "prettier": "^2.2.1"
   }
 }
