--- a/Interface/react/package.json
+++ b/Interface/react/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typedoc": "^0.21.0",
     "typescript": "^4.2.3",
     "video.js": "^7.11.4",
     "web-vitals": "^1.1.1"
