--- a/.github/workflows/Interface_Build.yml
+++ b/.github/workflows/Interface_Build.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           submodules: recursive
       - name: Build
-        run: docker build --file Interface/Dockerfile
+        run: docker build Interface
       - name: Prune images
         run: docker image prune --force --filter "until=24h"
         if: ${{ always() }}
