--- a/.github/workflows/Orchestrator_Build.yml
+++ b/.github/workflows/Orchestrator_Build.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           submodules: recursive
       - name: Build
-        run: docker build --file ProcessorOrchestrator/Dockerfile
+        run: docker build ProcessorOrchestrator
       - name: Prune images
         run: docker image prune --force --filter "until=24h"
         if: ${{ always() }}
