Spc 922 docker compose examples are not working (#210)
* FIX: interface readme

* OTH: Changed documentation to be in line with the rest

* FIX: removing composes

* FIX: updated workflows

* FIX: now really

Co-authored-by: Rienk <rienkfidder@gmail.com>

--- a/.github/workflows/Forwarder_Build.yml
+++ b/.github/workflows/Forwarder_Build.yml
@@ -18,15 +18,9 @@ jobs:
         with:
           submodules: recursive
       - name: Build
-        run: docker-compose -f VideoForwarder/docker-compose.yml build --no-cache
-      - name: Remove
-        run: docker-compose -f  VideoForwarder/docker-compose.yml down --rmi all
-        if: ${{ always() }}
+        run: docker build VideoForwarder
       - name: Build
-        run: docker-compose -f VideoForwarder/compose/docker-compose_build_gpu.yml build --no-cache
-      - name: Remove
-        run: docker-compose -f  VideoForwarder/compose/docker-compose_build_gpu.yml down --rmi all
-        if: ${{ always() }}
+        run: docker build VideoForwarder --target gpu
       - name: Prune images
         run: docker image prune --force --filter "until=24h"
         if: ${{ always() }}
