--- a/.github/workflows/Orchestrator_Build.yml
+++ b/.github/workflows/Orchestrator_Build.yml
@@ -18,10 +18,7 @@ jobs:
         with:
           submodules: recursive
       - name: Build
-        run: docker-compose -f ./ProcessorOrchestrator/docker-compose.yml build --no-cache
-      - name: Remove
-        run: docker-compose -f ./ProcessorOrchestrator/docker-compose.yml down --rmi all
-        if: ${{ always() }}
+        run: docker build ProcessorOrchestrator
       - name: Prune images
         run: docker image prune --force --filter "until=24h"
         if: ${{ always() }}
