--- a/.github/workflows/Processor_Build.yml
+++ b/.github/workflows/Processor_Build.yml
@@ -17,11 +17,8 @@ jobs:
       - uses: actions/checkout@v1
         with:
           submodules: recursive
-      - name: Build camera processor test service
-        run: docker-compose -f CameraProcessor/compose/docker-compose_test.yml build --no-cache
-      - name: Remove
-        run: docker-compose -f CameraProcessor/compose/docker-compose_test.yml down --rmi all
-        if: ${{ always() }}
+      - name: Build
+        run: docker build CameraProcessor
       - name: Prune images
         run: docker image prune --force --filter "until=24h"
         if: ${{ always() }}
