FFT Accuracy works. Sort of.
This is the most horrendous, jury-rigged, patchwork, undocumented, unreadable, hardcoded mess I have ever had the displeasure of writing.

--- a/CameraProcessor/configs.ini
+++ b/CameraProcessor/configs.ini
@@ -124,7 +124,7 @@ distance = cosine
 # mode_det values: yolov5, yolor
 mode_det = yolor
 # mode_reid values: torch, fast
-mode_reid = fast
+mode_reid = torch
 file = /train.py
 
 [Training_Yolov5]
@@ -199,6 +199,8 @@ device_number = 0
 detector = yolov5
 # Tracking algorithm to use for accuracy. Values: sort, sort_oh
 tracker = sort
+# Re-identification algorithm to use for accuracy. Values: torchreid, fastreid
+reid = torchreid
 # Plot images filename prefix.
 plots_prefix = ''
 # Plot images save location filepath.
