DOC: Updated README for accuracy component.

--- a/CameraProcessor/configs.ini
+++ b/CameraProcessor/configs.ini
@@ -189,9 +189,13 @@ print_freq = 10
 
 
 [Training_Fastreid]
+# Number of GPUs to use for training.
 num_gpus = 1
+# Config file to use for training.
 config_file = /configs/Market1501/bagtricks_R50.yml
+# Model device to use for training.
 model_device = cuda
+# Device number of model_device.
 device_number = 0
 
 [Accuracy]
