FIX: cutout from interface bug

--- a/CameraProcessor/configs.ini
+++ b/CameraProcessor/configs.ini
@@ -10,7 +10,7 @@ detector = yolov5
 # [ENVIRONMENT VAR REPLACES THIS IF SET] available trackers: sort, sort_oh
 tracker = sort
 # [ENVIRONMENT VAR REPLACES THIS IF SET] available reid: torchreid, fastreid
-reid = fastreid
+reid = torchreid
 
 [Input]
 # Type values: webcam, images, video, hls
@@ -104,7 +104,7 @@ weights_dir_path = ./processor/pipeline/reidentification/torchreid/weights
 # Used device type (cpu, cuda, xpu, mkldnn, opengl, opencl, ideep, hip, msnpu, xla, vulkan)
 device = cuda
 # Max euclidean distance between feature vectors to pass as a re-identification.
-threshold = 10.5
+threshold = 11.2
 distance = euclidean
 
 [FastReid]
