--- a/Interface/react/package.json
+++ b/Interface/react/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typedoc": "^0.21.0",
+    "typedoc-theme-dark": "0.0.5",
     "typescript": "^4.2.3",
     "video.js": "^7.11.4",
     "web-vitals": "^1.1.1"
