--- a/Interface/react/package.json
+++ b/Interface/react/package.json
@@ -26,7 +26,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typedoc": "^0.21.0",
-    "typedoc-theme-dark": "0.0.5",
     "typescript": "^4.2.3",
     "video.js": "^7.11.4",
     "web-vitals": "^1.1.1"
@@ -80,6 +79,7 @@
     "eslint-plugin-react": "^7.23.2",
     "jest-fetch-mock": "^3.0.3",
     "jwt-decode": "^3.1.2",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typedoc-dark-theme": "0.0.11"
   }
 }
