--- a/Interface/react/package.json
+++ b/Interface/react/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-react": "^7.23.2",
     "jest-fetch-mock": "^3.0.3",
     "jwt-decode": "^3.1.2",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typedoc-dark-theme": "0.0.11"
   }
 }
