FFT Accuracy works. Sort of. (#213)
* FFT Accuracy works. Sort of.

This is the most horrendous, jury-rigged, patchwork, undocumented, unreadable, hardcoded mess I have ever had the displeasure of writing.

* DOC: Linting.

* DOC: Updated README for accuracy component.

* FFT Accuracy works. Sort of.

This is the most horrendous, jury-rigged, patchwork, undocumented, unreadable, hardcoded mess I have ever had the displeasure of writing.

* FIX Readme for fastreid accuracy

* FIX unused imports

Co-authored-by: Jaimy Kwa <jaimykwa@gmail.com>
Co-authored-by: saberzero1 <ewjbangma@hotmail.com>

--- a/CameraProcessor/configs.ini
+++ b/CameraProcessor/configs.ini
@@ -124,7 +124,7 @@ distance = cosine
 # mode_det values: yolov5, yolor
 mode_det = yolor
 # mode_reid values: torch, fast
-mode_reid = fast
+mode_reid = torch
 file = /train.py
 
 [Training_Yolov5]
@@ -189,9 +189,13 @@ print_freq = 10
 
 
 [Training_Fastreid]
+# Number of GPUs to use for training.
 num_gpus = 1
+# Config file to use for training.
 config_file = /configs/Market1501/bagtricks_R50.yml
+# Model device to use for training.
 model_device = cuda
+# Device number of model_device.
 device_number = 0
 
 [Accuracy]
@@ -199,6 +203,8 @@ device_number = 0
 detector = yolov5
 # Tracking algorithm to use for accuracy. Values: sort, sort_oh
 tracker = sort
+# Re-identification algorithm to use for accuracy. Values: torchreid, fastreid
+reid = torchreid
 # Plot images filename prefix.
 plots_prefix = ''
 # Plot images save location filepath.
